--- a/src/index.css
+++ b/src/index.css
@@ -69,6 +69,10 @@ input:focus {
   font-size: 1.2rem;
   margin-bottom: 2rem;
 }
+.target-date{
+  font-size: 1rem;
+  margin-top: 0.2em;
+}
 
 table {
   width: 100%;
