--- a/src/styles/NewTripPage.module.css
+++ b/src/styles/NewTripPage.module.css
@@ -62,3 +62,15 @@
     background-color: #a5b4fc;
     cursor: not-allowed;
   }
+
+
+  .backButton {
+    background: none;
+    border: none;
+    color: #4f46e5;
+    font-size: 1.2rem;
+    cursor: pointer;
+    padding: 0.5rem;
+    position: absolute;
+    left: 0;
+  }
